Freedom Sanbox Ant Deploy/src/objects/Estate_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Attorney__c</fullName>
        <label>Attorney</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Backup__c</fullName>
        <label>Back-up Executor/Agent</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Estate Plan and Giftings</relationshipLabel>
        <relationshipName>Estate_Plan_and_Giftings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Copy_on_File__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copy on File?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Executed__c</fullName>
        <label>Date Executed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description_Quick_Notes__c</fullName>
        <label>Description Quick Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <picklist>
            <picklistValues>
                <fullName>Joint Recovable Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Needs Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stocks</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <label>Entity</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Estate Plan and Giftings</relationshipLabel>
        <relationshipName>Estate_Plan_and_Giftings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Executor_Agent__c</fullName>
        <label>Executor/Agent</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Arrangements__c</fullName>
        <label>Final Arrangements</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instrument_Gift_Type__c</fullName>
        <label>Instrument Gift Type</label>
        <picklist>
            <picklistValues>
                <fullName>Health Power of Attorney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Last Will and Testament</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stocks</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location_of_Original_Document__c</fullName>
        <label>Location of Original Document</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organ_Donor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Organ Donor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Provisions__c</fullName>
        <label>Provisions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Current</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Trust_Name__c</fullName>
        <label>Trust Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trustee_1__c</fullName>
        <label>Trustee 1</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trustee_2__c</fullName>
        <label>Trustee 2</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trustee_3__c</fullName>
        <label>Trustee 3</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Estate Plan and Gifting</label>
    <nameField>
        <displayFormat>EP{000000}</displayFormat>
        <label>Plan Gift ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Estate Plan and Giftings</pluralLabel>
    <recordTypes>
        <fullName>Annual_Gifting</fullName>
        <active>true</active>
        <description>Annual Gifting</description>
        <label>Annual Gifting</label>
    </recordTypes>
    <recordTypes>
        <fullName>Estate_Planning</fullName>
        <active>true</active>
        <description>Estate Planning Document</description>
        <label>Estate Planning</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>